--- a/analysis/benchmark_interval_size_distributions.qmd
+++ b/analysis/benchmark_interval_size_distributions.qmd
@@ -16,13 +16,11 @@ execute:
 
 ```{r setup}
 #| include: false
-library(tidyverse)
-library(here)
-library(patchwork)
-library(gt)
-
-source(here("R/data_loading.R"))
-source(here("R/plot_themes.R"))
+source(here::here("analysis/_notebook_setup.R"))
+analysis_setup(
+  load_plot_themes = TRUE,
+  load_gt = TRUE
+)
 ```
 
 ## Data Loading
@@ -30,27 +28,28 @@ source(here("R/plot_themes.R"))
 This notebook compares benchmark interval size distributions across benchmark sets.
 Platinum Pedigree regions are loaded using `load_platinum_pedigree_regions()`, which
 downloads from public S3 if files are missing locally.
-Data integrity checks are enforced in `R/data_loading.R` during data read and cache generation.
 
 ```{r load-data}
 bench_regions_df <- load_benchmark_regions()
 pp_regions_df <- load_platinum_pedigree_regions()
+interval_bench_levels <- c("v4.2.1", "v0.6", "v5.0q", "PP")
+reference_subset <- c("GRCh37", "GRCh38")
 
 interval_regions_df <- dplyr::bind_rows(bench_regions_df, pp_regions_df) %>%
   dplyr::filter(
-    bench_version %in% c("v5.0q", "v4.2.1", "v0.6", "PP"),
+    bench_version %in% interval_bench_levels,
     (bench_type == "smvar" & ref == "GRCh38") |
-      (bench_type == "stvar" & ref %in% c("GRCh37", "GRCh38")),
-    chrom %in% paste0("chr", 1:22)
+      (bench_type == "stvar" & ref %in% reference_subset),
+    chrom %in% AUTOSOME_CHROM_LEVELS
   ) %>%
   dplyr::mutate(
     bench_version = factor(
       as.character(bench_version),
-      levels = c("v4.2.1", "v0.6", "v5.0q", "PP")
+      levels = interval_bench_levels
     ),
     bench_type = factor(
       as.character(bench_type),
-      levels = c("smvar", "stvar")
+      levels = BENCH_TYPE_LEVELS
     )
   )
 ```
@@ -123,8 +122,8 @@ interval_count_plt
 
 ```{r combined-interval-figure}
 interval_plt <- interval_count_plt / interval_size_dist_plt +
-  patchwork::plot_layout(heights = c(1, 1.4))
-
+  patchwork::plot_layout(heights = c(1, 1.4), guides = "collect") +
+  plot_annotation(tag_levels = "A")
 interval_plt
 ```
 
